2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Do not clear `site-run-file'.  It does not work
	since Emacs 31.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (LaTeX-mode-hook, latex-mode-hook): Add
	`turn-on-reftex'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (emacs-startup-hook): Add
	`standard-display-unicode-special-glyphs'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-shellcheck-fix):
	Do not include all "web" tools.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	TeX configuration

	* init.el (TeX-auto-save, TeX-parse-self): Set to t;
	(TeX-master): Set default value to t.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Fix the command used
	to check whether the branch is updated.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (mode-specific-map): Bind "C-'" to `claude-code-ide-menu'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+mail-to-help-gnu-emacs): New command.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (undo-limit, undo-strong-limit): Increase undo limit.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+eglot-prefix-map): New keymap.  Bind to C-c l in
	`eglot-mode-map'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (toggle-map): Bind "e" to `eglot'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-run): Run `shell-file-name' if the
	command is not specified.
	(tui-locate): Display the preview window vertically.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Add
	`exit-recursive-edit' to `kill-buffer-hook'.

2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Customize header-line
	and mode-line.

2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `reposition-window' instead of `+recenter-top-30%'.

2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el: Update key bindings of eat.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (org-latex-classes): Add ctexart.
